# dopejar_sdk

./: app-config.yaml  catalog-info.yaml  docker-compose.yml  package.json
.yarn/patches/: @backstage-cli-npm-0.35.4-dfaee6d669.patch  (+1 more)
apis/: kernel-websocket.asyncapi.yaml  platform-sdk-mcp.yaml  portal-mcp.yaml
examples/: org.yaml
kernel/: main.py
platform_sdk/: MODULES.md  README.md  __init__.py  _registry.py  agent.py  catalog-info.yaml  mcp_server.py  mkdocs.yml  pyproject.toml  service.py
platform_sdk/docs/: ADOPTION.md  CONTRACT.md  TOOLING.md  index.md  mkdocs.yml
platform_sdk/docs/api/tier0/: config.md  data.md  errors.md  identity.md  ledger.md  logging.md  metrics.md  secrets.md
platform_sdk/docs/api/tier1/: context.md  middleware.md  ratelimit.md  retry.md  serialize.md  validate.md
platform_sdk/docs/api/tier2/: audit.md  cache.md  health.md
platform_sdk/docs/api/tier3/: authorization.md  notifications.md  vector.md
platform_sdk/docs/api/tier4/: cost.md  evals.md  inference.md  llm_obs.md
platform_sdk/docs/guides/: adding-a-module.md
platform_sdk/docs/surfaces/: agent.md  service.md
platform_sdk/tests/: conftest.py  test_tier0_core.py  test_tier1_runtime.py  test_tier4_advanced.py
platform_sdk/tier0_core/: __init__.py  config.py  data.py  errors.py  flags.py  http.py  identity.py  ids.py  ledger.py  logging.py  metrics.py  redact.py  secrets.py  tasks.py  tracing.py
platform_sdk/tier1_runtime/: __init__.py  clock.py  context.py  middleware.py  ratelimit.py  retry.py  runtime.py  serialize.py  validate.py
platform_sdk/tier2_reliability/: __init__.py  audit.py  cache.py  circuit.py  crypto.py  fallback.py  health.py  metrics.py  storage.py
platform_sdk/tier3_platform/: __init__.py  agent.py  api_client.py  authorization.py  discovery.py  experiments.py  multi_tenancy.py  notifications.py  policy.py  vector.py
platform_sdk/tier3_platform/clients/: README.md
platform_sdk/tier4_advanced/: __init__.py  cost.py  evals.py  inference.py  llm_obs.py  messaging.py  schemas.py  workflow.py
